# LibOVR

./: Makefile.am  README.md  configure.ac  libovr.pc.in
Src/: OVR_Linux_DeviceManager.cpp  OVR_Linux_DeviceManager.h  OVR_Linux_HIDDevice.cpp  OVR_Linux_HIDDevice.h  OVR_Linux_HMDDevice.cpp  OVR_Linux_HMDDevice.h  OVR_Linux_SensorDevice.cpp  OVR_Linux_SensorDevice.h
